--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,24 @@
 *.zip
 *.tar.gz
 *.rar
+*.war
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+credentials/
+Jetty/
+ProcRun/
+dist/
+jetty-base/
+system/
+logs/
+flows/
+doc/
+bin/
+messages/
+idp_ant.log
+idp_installation.Log
+LICENSE.txt
+
+confo/
