--- a/IdP/conf/idp.properties
+++ b/IdP/conf/idp.properties
@@ -8,7 +8,7 @@ idp.additionalProperties=/conf/ldap.properties, /conf/saml-nameid.properties, /c
 # Uncomment them and change the value to change functionality.
 
 # Set the entityID of the IdP
-idp.entityID=https://caragianbadlands.com/idp
+idp.entityID=https://caragianbadlands.com/idp/shibboleth
 
 # Set the file path which backs the IdP's own metadata publishing endpoint at /shibboleth.
 # Set to empty value to disable and return a 404.
