works! password was typo

--- a/IdP/conf/ldap.properties
+++ b/IdP/conf/ldap.properties
@@ -33,7 +33,7 @@ idp.authn.LDAP.userFilter=(sAMAccountName={user})
 # bind search configuration
 # for AD: idp.authn.LDAP.bindDN=adminuser@domain.com
 idp.authn.LDAP.bindDN=shibservice@seaofcarag.com
-idp.authn.LDAP.bindDNCredential=c@rag
+idp.authn.LDAP.bindDNCredential=C@rag
 
 # Format DN resolution, used by directAuthenticator, adAuthenticator
 # for AD use idp.authn.LDAP.dnFormat=%s@domain.com
