--- a/IdP/conf/ldap.properties
+++ b/IdP/conf/ldap.properties
@@ -29,7 +29,7 @@ idp.authn.LDAP.returnAttributes=passwordExpirationTime,loginGraceRemaining
 # for AD: CN=Users,DC=example,DC=org
 idp.authn.LDAP.baseDN=DC=seaofcarag, DC=com
 #idp.authn.LDAP.subtreeSearch                   = false
-idp.authn.LDAP.userFilter=(sAMAccountName={user})
+idp.authn.LDAP.userFilter=(userPrincipalName={user})
 # bind search configuration
 # for AD: idp.authn.LDAP.bindDN=adminuser@domain.com
 idp.authn.LDAP.bindDN=shibservice@seaofcarag.com
@@ -37,7 +37,7 @@ idp.authn.LDAP.bindDNCredential=C@rag
 
 # Format DN resolution, used by directAuthenticator, adAuthenticator
 # for AD use idp.authn.LDAP.dnFormat=%s@domain.com
-idp.authn.LDAP.dnFormat=%s@seaofcarag.com
+idp.authn.LDAP.dnFormat=%s
 
 # LDAP attribute configuration, see attribute-resolver.xml
 # Note, this likely won't apply to the use of legacy V2 resolver configurations
@@ -49,7 +49,7 @@ idp.attribute.resolver.LDAP.bindDN=%{idp.authn.LDAP.bindDN:undefined}
 idp.attribute.resolver.LDAP.bindDNCredential=%{idp.authn.LDAP.bindDNCredential:undefined}
 idp.attribute.resolver.LDAP.useStartTLS=%{idp.authn.LDAP.useStartTLS:true}
 idp.attribute.resolver.LDAP.trustCertificates=%{idp.authn.LDAP.trustCertificates:undefined}
-idp.attribute.resolver.LDAP.searchFilter=(sAMAccountName=$resolutionContext.principal)
+idp.attribute.resolver.LDAP.searchFilter=(userPrincipalName=$resolutionContext.principal)
 
 # LDAP pool configuration, used for both authn and DN resolution
 #idp.pool.LDAP.minSize                          = 3
